src/objects/Document__c.object
<CustomObject>
    <description>An object for holding document profiles for the Document Tracker.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>A checkbox to indicate a document profiles active status.</description>
        <inlineHelpText>Check if the document is active, uncheck if the document is inactive.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Include__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This box should be checked if you want this document to be automatically included when creating a new Service Assignment for clients associated with a state(s) this document is associated with.</description>
        <inlineHelpText>This box should be checked if you want this document to be automatically included when creating a new Service Assignment for clients associated with a state(s) this document is associated with.</inlineHelpText>
        <label>Auto Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase_or_Level__c</fullName>
        <label>Phase or Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>A field to hold the program name for Fidelity Documents ONLY, in order to provide an easy means of getting the Fidelity Document program on the Document list view.  The inclusion of Fidelity Documents on a given Service Assignment is handled via creation of a cross-reference record in Program_Document_Xref__c, NOT by reference to this field on the Document__c record(s).</description>
        <label>Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relative_Due_Date_Event__c</fullName>
        <description>The event that serves as the baseline for relative due dates.</description>
        <inlineHelpText>Select an event to server as the baseline for this document&apos;s relative due date.</inlineHelpText>
        <label>Relative Due Date Event</label>
        <picklist>
            <picklistValues>
                <fullName>Calendar Month End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calendar Quarter End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MENTOR Fiscal Year End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Tx Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Tx End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Anniversary of Client Tx Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly Anniversary of Client Tx Start</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relative_Due_Date_UOM__c</fullName>
        <description>The Unit of Measure (UOM) specified for the relative due date for a document profile.</description>
        <inlineHelpText>Select a Unit of Measure (UOM) for the relative due date for a document profile.</inlineHelpText>
        <label>Relative Due Date Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Day(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month(s)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relative_Due_Date_Units__c</fullName>
        <description>The number of units of the unit of measure specified for the relative due date value.</description>
        <inlineHelpText>The number of units of the unit of measure specified for the relative due date value.</inlineHelpText>
        <label>Relative Due Date Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_From_Date__c</fullName>
        <description>The start date of the date range within which the document is required.</description>
        <inlineHelpText>The start date of the date range within which the document is required.</inlineHelpText>
        <label>Required From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Required_To_Date__c</fullName>
        <description>The end date of the date range within which the document is required.</description>
        <inlineHelpText>The end date of the date range within which the document is required.</inlineHelpText>
        <label>Required To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Service Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>The state(s) to which a document is related</description>
        <inlineHelpText>Pick a state(s) to which the document profile will be associated.</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL-Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH-Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA-Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Case Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fidelity Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Program__c</columns>
        <columns>Service_Line__c</columns>
        <columns>Phase_or_Level__c</columns>
        <columns>Order__c</columns>
        <columns>Active__c</columns>
        <columns>Relative_Due_Date_Units__c</columns>
        <columns>Relative_Due_Date_UOM__c</columns>
        <columns>Relative_Due_Date_Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cambridge_BP_DocView</fullName>
        <columns>State__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>Relative_Due_Date_Units__c</columns>
        <columns>Relative_Due_Date_UOM__c</columns>
        <columns>Relative_Due_Date_Event__c</columns>
        <columns>Auto_Include__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>NC</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Case Document</value>
        </filters>
        <filters>
            <field>Auto_Include__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cambridge BP DocView</label>
    </listViews>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_CaseDocs_Without_DueDateInfo</fullName>
        <active>true</active>
        <description>Prevent saving a Document__c profile if &quot;Fidelity Document&quot; is NOT selected as the Document__c Type value, and any of the following fields are NULL:  Relative Due Date Units, Relative Due Date UOM, Relative Due Date Event.</description>
        <errorConditionFormula>AND(  ISPICKVAL(Type__c, &apos;Case Document&apos;), OR(ISNULL( Relative_Due_Date_Units__c ), ISPICKVAL( Relative_Due_Date_UOM__c ,&apos;&apos;),ISPICKVAL( Relative_Due_Date_Event__c, &apos;&apos; )))</errorConditionFormula>
        <errorMessage>If &quot;Fidelity Document&quot; is not indicated for Doc Type, then a  value must be supplied for Relative Due Date Units, Relative Due Date UOM, and Relative Due Date Event.  Please edit the document and try again.</errorMessage>
    </validationRules>
</CustomObject>